--- a/.github/workflows/ecs.yml
+++ b/.github/workflows/ecs.yml
@@ -1,11 +1,11 @@
-name: bc
+name: ecs
 
 on:
   workflow_call:
     inputs:
-      coverage:
-        description: Generate code coverage report.
-        default: pcov
+      composer-command:
+        description: Composer command to run.
+        default: composer update --prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi
         required: false
         type: string
       extensions:
@@ -19,26 +19,26 @@ on:
         required: false
         type: string
       os:
-        description: Os to test, separated by comma.
+        description: OS to run action, separated by comma.
         required: true
         type: string
       php:
-        description: PHP versions to test, separated by comma.
+        description: PHP versions to run action, separated by comma.
         required: true
         type: string
-      tools:
-        description: Tools to test, separated by comma.
-        default: composer:v2
-        required: false
-        type: string
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  bc:
+  ecs:
     name: PHP ${{ matrix.php }}-${{ matrix.os }}
 
     runs-on: ${{ matrix.os }}
 
     strategy:
+      fail-fast: false
       matrix:
         os: ${{ fromJson(inputs.os) }}
         php: ${{ fromJson(inputs.php) }}
@@ -46,20 +46,20 @@ jobs:
     steps:
       - name: Checkout.
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
-      - name: Install PHP with extensions.
+      - name: Install PHP.
         uses: shivammathur/setup-php@v2
         with:
-          coverage: ${{ inputs.coverage }}
-          extensions: ${{ inputs.extensions }}
+          coverage: none
+          extensions: ${{ inputs.extensions}}
           ini-values: ${{ inputs.ini-values }}
           php-version: ${{ matrix.php }}
-          tools: ${{ inputs.tools }}
 
-      - name: Install roave/backward-compatibility-check.
-        run: composer require --dev roave/backward-compatibility-check
+      - name: Update composer.
+        run: composer self-update
 
-      - name: Run roave/backward-compatibility-check.
-        run: vendor/bin/roave-backward-compatibility-check
+      - name: Install dependencies with composer.
+        run: ${{ inputs.composer-command }}
+
+      - name: Run easy-coding-standard.
+        run: vendor/bin/ecs check src tests --ansi
