--- a/.github/workflows/roave-infection.yml
+++ b/.github/workflows/roave-infection.yml
@@ -1,4 +1,4 @@
-name: composer-require-checker
+name: roave-infection
 
 on:
   workflow_call:
@@ -8,27 +8,41 @@ on:
         default: composer update --prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi
         required: false
         type: string
-      config:
-        description: A path to config file.
+      extensions:
+        description: List of extensions to PHP.
+        default:
         required: false
         type: string
-        default: ""
+      ini-values:
+        description: Initial values for PHP configuration.
+        default: date.timezone='UTC'
+        required: false
+        type: string
+      min-covered-msi:
+        description: Minimum MSI to be considered a success.
+        default: 0
+        required: false
+        type: string
+      min-msi:
+        description: Minimum Mutation Score Indicator.
+        default: 0
+        required: false
+        type: string
       os:
-        description: Operating systems to test, separated by comma.
+        description: Os to test, separated by comma.
         required: true
         type: string
       php:
         description: PHP versions to test, separated by comma.
         required: true
         type: string
-      extensions:
-        description: List of extensions to PHP.
-        default:
-        required: false
-        type: string
+
+    secrets:
+      STRYKER_DASHBOARD_API_KEY:
+        required: true
 
 jobs:
-  composer-require-checker:
+  roave-infection:
     name: PHP ${{ matrix.php }}-${{ matrix.os }}
 
     runs-on: ${{ matrix.os }}
@@ -45,10 +59,11 @@ jobs:
       - name: Install PHP with extensions.
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php }}
+          coverage: pcov
           extensions: ${{ inputs.extensions }}
+          ini-values: ${{ inputs.ini-values }}
+          php-version: ${{ matrix.php }}
           tools: composer:v2
-          coverage: none
 
       - name: Determine composer cache directory on Linux.
         run: echo "COMPOSER_CACHE_DIR=$(composer config cache-dir)" >> $GITHUB_ENV
@@ -59,7 +74,7 @@ jobs:
           path: ${{ env.COMPOSER_CACHE_DIR }}
           key: php${{ matrix.php }}-composer-${{ hashFiles('composer.json') }}
           restore-keys: |
-            php${{ matrix.php }}-composer-
+            php${{ matrix.php }}-composer
 
       - name: Update composer.
         run: composer self-update
@@ -67,5 +82,8 @@ jobs:
       - name: Install dependencies with composer.
         run: ${{ inputs.composer-command }}
 
-      - name: Check dependencies.
-        run: args=(); test -n "${{ inputs.config }}" && args+=("--config-file=${{ inputs.config }}"); vendor/bin/composer-require-checker ${args[@]}
+      - name: Run roave infection.
+        run: |
+          vendor/bin/roave-infection-static-analysis-plugin --threads=2 --min-msi=${{ inputs.min-msi }} --min-covered-msi=${{ inputs.min-covered-msi }} --ignore-msi-with-no-mutations --only-covered
+        env:
+          STRYKER_DASHBOARD_API_KEY: ${{ secrets.STRYKER_DASHBOARD_API_KEY }}
